- Add README.md update some dto delete unused method from repository change get card details logic update openapi.yaml update docker-compose.yml update mappings naming to one style add testing card data
