# src/main/java/com/example/bankcards/dto/card/request/CardPasswordRequest.java
@@ -3,15 +3,13 @@ package com.example.bankcards.dto.card.request;
 import jakarta.validation.constraints.NotNull;
 import jakarta.validation.constraints.Pattern;
 import jakarta.validation.constraints.Size;
-import org.hibernate.validator.constraints.LuhnCheck;
 
 public record CardPasswordRequest(
 
         @NotNull(message = "Card number is required")
-        @Size(min = 16, max = 16, message = "Card number must be 16 digits")
+        @Size(min = 4, max = 4, message = "Last 4 digits of number")
         @Pattern(regexp = "\\d+", message = "Card number must contain only digits")
-        @LuhnCheck(message = "Invalid card number (checksum failed)")
-        String number,
+        String lastFourDigitsOfNumber,
 
         @NotNull(message = "Pincode is required")
         @Size(min = 4, max = 4, message = "Pincode must be exactly 4 digits")
